--- a/hexapod/RPI_pico_C/CMakeLists.txt
+++ b/hexapod/RPI_pico_C/CMakeLists.txt
@@ -15,6 +15,7 @@ pico_sdk_init()
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME} 
     main.c
+    rp_lidar.c
 )
 
 # Create map/bin/hex/uf2 files
@@ -23,8 +24,6 @@ pico_add_extra_outputs(${PROJECT_NAME})
 # Link to pico_stdlib (gpio, time, etc. functions)
 target_link_libraries(${PROJECT_NAME} 
     pico_stdlib
+    pico_multicore
+    hardware_pwm
 )
-
-# Enable usb output, disable uart output
-pico_enable_stdio_usb(${PROJECT_NAME} 1)
-pico_enable_stdio_uart(${PROJECT_NAME} 0)
