--- a/joystick/RPI/arduino_config.json
+++ b/joystick/RPI/arduino_config.json
@@ -2,16 +2,16 @@
     "x_der":{
         "value":0,
         "modo":"normal",
-        "min":-1000,
-        "max":1000,
+        "min":-640,
+        "max":640,
         "PPS":0,
         "centro":0
     },
     "y_der":{
         "value":0,
         "modo":"normal",
-        "min":-1000,
-        "max":1000,
+        "min":-640,
+        "max":640,
         "PPS":0,
         "centro":0
     },
@@ -25,22 +25,22 @@
     "x_izq":{
         "value":0,
         "modo":"normal",
-        "min":-1000,
-        "max":1000,
+        "min":-2000,
+        "max":2000,
         "PPS":0,
         "centro":0
     },
     "y_izq":{
         "value":0,
         "modo":"normal",
-        "min":-1000,
-        "max":1000,
+        "min":-2000,
+        "max":2000,
         "PPS":0,
         "centro":0
     },
     "but_analog_izq":{
         "value":0,
-        "modo":"normal",
+        "modo":"mantenido",
         "min":0,
         "max":1
     },
@@ -77,16 +77,16 @@
         "value":0
     },
     "cruz_izq_h":{
-        "value":0,
-        "modo":"normal",
+        "value":70,
+        "modo":"incremental",
         "continuo": true,
-        "min":0,
-        "max":255,
-        "PPS":1
+        "min":70,
+        "max":180,
+        "PPS":10
     },
     "cruz_izq_v":{
         "value":0,
-        "modo":"normal",
+        "modo":"incremental",
         "continuo": true,
         "min":0,
         "max":255,
@@ -103,14 +103,14 @@
     ,
     "but_der_b":{
         "value":0,
-        "modo":"normal",
+        "modo":"circular",
         "min":0,
-        "max":1
+        "max":2
     }
     ,
     "but_der_c":{
         "value":0,
-        "modo":"normal",
+        "modo":"mantenido",
         "min":0,
         "max":1
     },
